--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=
+
+RAJAONGKIR_API_URL=
+RAJAONGKIR_API_KEY=
+
+MIDTRANS_CLIENTKEY=
+MIDTRANS_SERVERKEY=
